--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "url": "https://github.com/nvcexploder/deployer/issues"
   },
   "dependencies": {
+    "async": "^0.9.0",
+    "cli": "~0.6.5",
+    "ignore": "~2.2.15",
+    "inquirer": "^0.8.0",
     "jshint": "~2.5.7",
-    "precommit-hook": "~1.0.7"
+    "lab": "~5.0.1",
+    "precommit-hook": "~1.0.7",
+    "simple-ssh": "^0.8.0"
   }
 }
